--- a/.env.example
+++ b/.env.example
@@ -5,14 +5,14 @@
 # If you are cloning this repo, create a copy of this file named `.env` and populate it with your secrets.
 
 # The database URL is used to connect to your Supabase database.
-POSTGRES_URL="postgres://postgres.[USERNAME]:[PASSWORD]@aws-0-eu-central-1.pooler.supabase.com:6543/postgres?workaround=supabase-pooler.vercel"
+POSTGRES_URL="postgresql://postgres.[PROJECT-REF]:[PASSWORD]@aws-1-ap-south-1.pooler.supabase.com:5432/postgres"
 
 
 # You can generate the secret via 'openssl rand -base64 32' on Unix
 # @see https://www.better-auth.com/docs/installation
 AUTH_SECRET='supersecret'
 
-# Preconfigured Discord OAuth provider, works out-of-the-box
+# Optional Discord OAuth provider (leave blank to disable Discord sign-in)
 # @see https://www.better-auth.com/docs/authentication/discord
 AUTH_DISCORD_ID=''
 AUTH_DISCORD_SECRET=''
